<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01var05</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="north_button">North</string>
    <string name="south_button">South</string>
    <string name="west_button">West</string>
    <string name="east_button">East</string>
    <string name="main_text"></string>
    <string name="nr_instr_text"></string>
    <string name="coord_text"></string>
    <string name="navigate_sec_activity_button">Navigate to secondary activity</string>
    <string name="title_activity_practical_test01_var05_secondary">PracticalTest01Var05SecondaryActivity</string>
    <string name="register_button">Register</string>
    <string name="cancel_button">Cancel</string>

</resources>
